fix small spacing issue on gabriel theme

--- a/go-fish-static/stylesheets/core/themes/gabriel-theme-core.scss
+++ b/go-fish-static/stylesheets/core/themes/gabriel-theme-core.scss
@@ -16,7 +16,7 @@
         &#player-selection,
         &#card-selection {
             background-position-x: calc(100% - (var(--op-space-x-large) / 2 - var(--op-encoded-images-dropdown-arrow-width) / 2));
-            padding: var(--op-space-3x-small) var(--op-space-2x-small) var(--op-space-3x-small) var(--op-space-2x-small);
+            padding: var(--op-space-3x-small) var(--op-space-2x-small) var(--op-space-3x-small) var(--op-space-x-small);
         }
     }
 }
